// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checked-color prop 1`] = `
<div class="buri-checkbox-group">
  <div role="checkbox" tabindex="0" aria-checked="true" class="buri-checkbox">
    <div class="buri-checkbox__icon buri-checkbox__icon--round buri-checkbox__icon--checked"><i class="buri-icon buri-icon-success" style="border-color: black; background-color: black;">
        <!----></i></div><span class="buri-checkbox__label">label</span>
  </div>
  <div role="checkbox" tabindex="0" aria-checked="true" class="buri-checkbox">
    <div class="buri-checkbox__icon buri-checkbox__icon--round buri-checkbox__icon--checked"><i class="buri-icon buri-icon-success" style="border-color: white; background-color: white;">
        <!----></i></div><span class="buri-checkbox__label">label</span>
  </div>
</div>
`;

exports[`icon-size prop 1`] = `
<div class="buri-checkbox-group">
  <div role="checkbox" tabindex="0" aria-checked="false" class="buri-checkbox">
    <div class="buri-checkbox__icon buri-checkbox__icon--round" style="font-size: 10rem;"><i class="buri-icon buri-icon-success">
        <!----></i></div><span class="buri-checkbox__label">label</span>
  </div>
  <div role="checkbox" tabindex="0" aria-checked="false" class="buri-checkbox">
    <div class="buri-checkbox__icon buri-checkbox__icon--round" style="font-size: 5rem;"><i class="buri-icon buri-icon-success">
        <!----></i></div><span class="buri-checkbox__label">label</span>
  </div>
</div>
`;

exports[`label disabled 1`] = `
<div role="checkbox" tabindex="0" aria-checked="undefined" class="buri-checkbox buri-checkbox--label-disabled">
  <div class="buri-checkbox__icon buri-checkbox__icon--round"><i class="buri-icon buri-icon-success">
      <!----></i></div><span class="buri-checkbox__label">Label</span>
</div>
`;

exports[`label-position prop 1`] = `
<div role="checkbox" tabindex="0" aria-checked="undefined" class="buri-checkbox"><span class="buri-checkbox__label buri-checkbox__label--left">Label</span>
  <div class="buri-checkbox__icon buri-checkbox__icon--round"><i class="buri-icon buri-icon-success">
      <!----></i></div>
</div>
`;
